# ProjektDMM

./: CMakeLists.txt  Documentation.odt  Makefile
build_Test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_Test/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_Test/test/: CTestTestfile.cmake  Makefile  Tests  cmake_install.cmake
include/: adc.h  displayDriver.h  main.h  voltage.h
src/: CMakeLists.txt  adc.c  displayDriver.c  main.c  voltage.c
test/: CMakeLists.txt  testRunner.c
